--- a/src/components/Car/Car.scss
+++ b/src/components/Car/Car.scss
@@ -16,4 +16,108 @@
   white-space: nowrap;
   transition: width 12;
   z-index: 9;
+
+  .car-content__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    border-bottom: 1px solid #4f5256;
+    height: 76px;
+
+    > div {
+      &:first-of-type {
+        display: flex;
+
+        svg {
+          width: 12px;
+          margin-right: 20px;
+          fill: #fff;
+        }
+        &:hover {
+          cursor: pointer;
+        }
+        h2 {
+          color: #fff;
+          margin: 0;
+          font-size: 24px;
+        }
+      }
+    }
+
+    button {
+      margin: 0;
+      color: #fff;
+
+      &:hover {
+        text-decoration: none;
+        color: #0098d3;
+
+        svg {
+          fill: #0098d3;
+        }
+      }
+
+      svg {
+        height: 20px;
+        width: 20px;
+        fill: #fff;
+        margin-left: 10px;
+      }
+    }
+  }
+
+  .car-content__products {
+    height: calc(100vh - 76px - 119px);
+    overflow: scroll;
+  }
+
+  .car-content__product {
+    display: flex;
+    align-items: center;
+    padding: 15px;
+    border-bottom: 1px solid #4f5256;
+
+    img {
+      width: 100px;
+      margin-right: 10px;
+    }
+
+    .car-content__product-info {
+      color: #fff;
+      width: 100%;
+
+      h3 {
+        font-size: 18px;
+      }
+      p {
+        font-size: 16px;
+      }
+
+      > div {
+        &:first-of-type {
+          border-bottom: 1px solid #4f5256;
+        }
+        &:last-of-type {
+          margin-top: 15px;
+          display: flex;
+          justify-content: space-between;
+
+          p {
+            margin: 0;
+          }
+
+          button {
+            background-color: #0098d3;
+            border-color: #0098d3;
+            color: #fff;
+            border-radius: 5px;
+            margin: 0 5px;
+            width: 30px;
+            height: 30px;
+          }
+        }
+      }
+    }
+  }
 }
